--- a/src/app/styles/Portofolio.module.css
+++ b/src/app/styles/Portofolio.module.css
@@ -23,3 +23,49 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 3rem;
 }
+
+.buttonRow {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+
+.cta {
+  background: #ff5a1f;
+  color: white;
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 2rem;
+  font-size: 1.5rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  opacity: 0; /* animasi awal */
+  transform: translateY(20px);
+  animation: fadeUp 3s ease forwards;
+}
+
+.cta:hover {
+  background: #e14d14;
+  transform: scale(1.05);
+}
+
+.fadeIn {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeUp 1s ease forwards;
+}
+
+.fadeIn:nth-child(1) { animation-delay: 0.2s; }
+.fadeIn:nth-child(2) { animation-delay: 0.4s; }
+.fadeIn:nth-child(3) { animation-delay: 0.6s; }
+.fadeIn:nth-child(4) { animation-delay: 0.8s; }
+
+@keyframes fadeUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
